--- a/package.json
+++ b/package.json
@@ -8,14 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "awesome-mask": "^1.1.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "naive-ui": "^2.29.1",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^3.5.1",
+    "vue-select": "^3.18.3",
+    "vue-the-mask": "^0.11.1",
+    "vuelidate": "^0.7.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
