--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "naive-ui": "^2.29.1",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.4.1",
     "vue-router": "^3.5.1",
     "vue-select": "^3.18.3",
