--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.4.1",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
     "vue-select": "^3.18.3",
     "vue-the-mask": "^0.11.1",
@@ -32,6 +33,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
