--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.4.1",
     "vue-carousel": "^0.18.0",
-    "vue-router": "^3.5.1",
+    "vue-router": "3.1.6",
     "vue-select": "^3.18.3",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.7",
@@ -26,14 +26,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
+    "@vue/cli-plugin-babel": "4.2.3",
+    "@vue/cli-plugin-eslint": "4.2.3",
+    "@vue/cli-plugin-router": "4.2.3",
+    "@vue/cli-service": "4.2.3",
+    "eslint": "6.8.0",
+    "eslint-plugin-vue": "6.2.2",
+    "sass": "1.26.2",
+    "sass-loader": "8.0.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
